// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filters Bar should create a hidden Filters Bar 1`] = `
<DocumentFragment>
  <div
    class="container panel filters hidden"
  >
    <span
      class="MuiSlider-root MuiSlider-colorPrimary slider MuiSlider-marked"
    >
      <span
        class="MuiSlider-rail"
      />
      <span
        class="MuiSlider-track"
        style="left: 0%; width: 100%;"
      />
      <input
        type="hidden"
        value="0,110"
      />
      <span
        class="MuiSlider-mark MuiSlider-markActive"
        data-index="0"
        style="left: 0%;"
      />
      <span
        aria-hidden="true"
        class="MuiSlider-markLabel MuiSlider-markLabelActive"
        data-index="0"
        style="left: 0%;"
      >
        0
      </span>
      <span
        class="MuiSlider-mark MuiSlider-markActive"
        data-index="1"
        style="left: 9.090909090909092%;"
      />
      <span
        aria-hidden="true"
        class="MuiSlider-markLabel MuiSlider-markLabelActive"
        data-index="1"
        style="left: 9.090909090909092%;"
      >
        10
      </span>
      <span
        class="MuiSlider-mark MuiSlider-markActive"
        data-index="2"
        style="left: 18.181818181818183%;"
      />
      <span
        aria-hidden="true"
        class="MuiSlider-markLabel MuiSlider-markLabelActive"
        data-index="2"
        style="left: 18.181818181818183%;"
      >
        20
      </span>
      <span
        class="MuiSlider-mark MuiSlider-markActive"
        data-index="3"
        style="left: 27.272727272727273%;"
      />
      <span
        aria-hidden="true"
        class="MuiSlider-markLabel MuiSlider-markLabelActive"
        data-index="3"
        style="left: 27.272727272727273%;"
      >
        30
      </span>
      <span
        class="MuiSlider-mark MuiSlider-markActive"
        data-index="4"
        style="left: 36.36363636363637%;"
      />
      <span
        aria-hidden="true"
        class="MuiSlider-markLabel MuiSlider-markLabelActive"
        data-index="4"
        style="left: 36.36363636363637%;"
      >
        40
      </span>
      <span
        class="MuiSlider-mark MuiSlider-markActive"
        data-index="5"
        style="left: 45.45454545454545%;"
      />
      <span
        aria-hidden="true"
        class="MuiSlider-markLabel MuiSlider-markLabelActive"
        data-index="5"
        style="left: 45.45454545454545%;"
      >
        50
      </span>
      <span
        class="MuiSlider-mark MuiSlider-markActive"
        data-index="6"
        style="left: 54.54545454545455%;"
      />
      <span
        aria-hidden="true"
        class="MuiSlider-markLabel MuiSlider-markLabelActive"
        data-index="6"
        style="left: 54.54545454545455%;"
      >
        60
      </span>
      <span
        class="MuiSlider-mark MuiSlider-markActive"
        data-index="7"
        style="left: 63.63636363636363%;"
      />
      <span
        aria-hidden="true"
        class="MuiSlider-markLabel MuiSlider-markLabelActive"
        data-index="7"
        style="left: 63.63636363636363%;"
      >
        70
      </span>
      <span
        class="MuiSlider-mark MuiSlider-markActive"
        data-index="8"
        style="left: 72.72727272727273%;"
      />
      <span
        aria-hidden="true"
        class="MuiSlider-markLabel MuiSlider-markLabelActive"
        data-index="8"
        style="left: 72.72727272727273%;"
      >
        80
      </span>
      <span
        class="MuiSlider-mark MuiSlider-markActive"
        data-index="9"
        style="left: 81.81818181818181%;"
      />
      <span
        aria-hidden="true"
        class="MuiSlider-markLabel MuiSlider-markLabelActive"
        data-index="9"
        style="left: 81.81818181818181%;"
      >
        90
      </span>
      <span
        class="MuiSlider-mark MuiSlider-markActive"
        data-index="10"
        style="left: 90.9090909090909%;"
      />
      <span
        aria-hidden="true"
        class="MuiSlider-markLabel MuiSlider-markLabelActive"
        data-index="10"
        style="left: 90.9090909090909%;"
      >
        100
      </span>
      <span
        class="MuiSlider-mark MuiSlider-markActive"
        data-index="11"
        style="left: 100%;"
      />
      <span
        aria-hidden="true"
        class="MuiSlider-markLabel MuiSlider-markLabelActive"
        data-index="11"
        style="left: 100%;"
      >
        110+
      </span>
      <span
        aria-label="slider"
        aria-orientation="horizontal"
        aria-valuemax="110"
        aria-valuemin="0"
        aria-valuenow="0"
        aria-valuetext="0"
        class="MuiSlider-thumb MuiSlider-thumbColorPrimary"
        data-index="0"
        role="slider"
        style="left: 0%;"
        tabindex="0"
      />
      <span
        aria-label="slider"
        aria-orientation="horizontal"
        aria-valuemax="110"
        aria-valuemin="0"
        aria-valuenow="110"
        aria-valuetext="110"
        class="MuiSlider-thumb MuiSlider-thumbColorPrimary"
        data-index="1"
        role="slider"
        style="left: 100%;"
        tabindex="0"
      />
    </span>
    <div
      class="genders"
    >
      <svg
        class="icon "
        fill="currentColor"
        height="28"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 512 512"
        width="28"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          hommes
        </title>
        <path
          d="M330 48v44h58.89l-60.39 60.39c-68.2-52.86-167-48-229.54 14.57C31.12 234.81 31.12 345.19 99 413a174.21 174.21 0 00246 0c62.57-62.58 67.43-161.34 14.57-229.54L420 123.11V182h44V48zm-16.08 333.92a130.13 130.13 0 01-183.84 0c-50.69-50.68-50.69-133.16 0-183.84s133.16-50.69 183.84 0 50.69 133.16 0 183.84z"
        />
      </svg>
      <svg
        class="icon "
        fill="currentColor"
        height="28"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 512 512"
        width="28"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          femmes
        </title>
        <path
          d="M430 190c0-95.94-78.06-174-174-174S82 94.06 82 190c0 88.49 66.4 161.77 152 172.61V394h-58v44h58v58h44v-58h58v-44h-58v-31.39c85.6-10.84 152-84.12 152-172.61zm-304 0c0-71.68 58.32-130 130-130s130 58.32 130 130-58.32 130-130 130-130-58.32-130-130z"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Filters Bar should create a visible Filters Bar 1`] = `
<DocumentFragment>
  <div
    class="container panel filters "
  >
    <span
      class="MuiSlider-root MuiSlider-colorPrimary slider MuiSlider-marked"
    >
      <span
        class="MuiSlider-rail"
      />
      <span
        class="MuiSlider-track"
        style="left: 0%; width: 100%;"
      />
      <input
        type="hidden"
        value="0,110"
      />
      <span
        class="MuiSlider-mark MuiSlider-markActive"
        data-index="0"
        style="left: 0%;"
      />
      <span
        aria-hidden="true"
        class="MuiSlider-markLabel MuiSlider-markLabelActive"
        data-index="0"
        style="left: 0%;"
      >
        0
      </span>
      <span
        class="MuiSlider-mark MuiSlider-markActive"
        data-index="1"
        style="left: 9.090909090909092%;"
      />
      <span
        aria-hidden="true"
        class="MuiSlider-markLabel MuiSlider-markLabelActive"
        data-index="1"
        style="left: 9.090909090909092%;"
      >
        10
      </span>
      <span
        class="MuiSlider-mark MuiSlider-markActive"
        data-index="2"
        style="left: 18.181818181818183%;"
      />
      <span
        aria-hidden="true"
        class="MuiSlider-markLabel MuiSlider-markLabelActive"
        data-index="2"
        style="left: 18.181818181818183%;"
      >
        20
      </span>
      <span
        class="MuiSlider-mark MuiSlider-markActive"
        data-index="3"
        style="left: 27.272727272727273%;"
      />
      <span
        aria-hidden="true"
        class="MuiSlider-markLabel MuiSlider-markLabelActive"
        data-index="3"
        style="left: 27.272727272727273%;"
      >
        30
      </span>
      <span
        class="MuiSlider-mark MuiSlider-markActive"
        data-index="4"
        style="left: 36.36363636363637%;"
      />
      <span
        aria-hidden="true"
        class="MuiSlider-markLabel MuiSlider-markLabelActive"
        data-index="4"
        style="left: 36.36363636363637%;"
      >
        40
      </span>
      <span
        class="MuiSlider-mark MuiSlider-markActive"
        data-index="5"
        style="left: 45.45454545454545%;"
      />
      <span
        aria-hidden="true"
        class="MuiSlider-markLabel MuiSlider-markLabelActive"
        data-index="5"
        style="left: 45.45454545454545%;"
      >
        50
      </span>
      <span
        class="MuiSlider-mark MuiSlider-markActive"
        data-index="6"
        style="left: 54.54545454545455%;"
      />
      <span
        aria-hidden="true"
        class="MuiSlider-markLabel MuiSlider-markLabelActive"
        data-index="6"
        style="left: 54.54545454545455%;"
      >
        60
      </span>
      <span
        class="MuiSlider-mark MuiSlider-markActive"
        data-index="7"
        style="left: 63.63636363636363%;"
      />
      <span
        aria-hidden="true"
        class="MuiSlider-markLabel MuiSlider-markLabelActive"
        data-index="7"
        style="left: 63.63636363636363%;"
      >
        70
      </span>
      <span
        class="MuiSlider-mark MuiSlider-markActive"
        data-index="8"
        style="left: 72.72727272727273%;"
      />
      <span
        aria-hidden="true"
        class="MuiSlider-markLabel MuiSlider-markLabelActive"
        data-index="8"
        style="left: 72.72727272727273%;"
      >
        80
      </span>
      <span
        class="MuiSlider-mark MuiSlider-markActive"
        data-index="9"
        style="left: 81.81818181818181%;"
      />
      <span
        aria-hidden="true"
        class="MuiSlider-markLabel MuiSlider-markLabelActive"
        data-index="9"
        style="left: 81.81818181818181%;"
      >
        90
      </span>
      <span
        class="MuiSlider-mark MuiSlider-markActive"
        data-index="10"
        style="left: 90.9090909090909%;"
      />
      <span
        aria-hidden="true"
        class="MuiSlider-markLabel MuiSlider-markLabelActive"
        data-index="10"
        style="left: 90.9090909090909%;"
      >
        100
      </span>
      <span
        class="MuiSlider-mark MuiSlider-markActive"
        data-index="11"
        style="left: 100%;"
      />
      <span
        aria-hidden="true"
        class="MuiSlider-markLabel MuiSlider-markLabelActive"
        data-index="11"
        style="left: 100%;"
      >
        110+
      </span>
      <span
        aria-label="slider"
        aria-orientation="horizontal"
        aria-valuemax="110"
        aria-valuemin="0"
        aria-valuenow="0"
        aria-valuetext="0"
        class="MuiSlider-thumb MuiSlider-thumbColorPrimary"
        data-index="0"
        role="slider"
        style="left: 0%;"
        tabindex="0"
      />
      <span
        aria-label="slider"
        aria-orientation="horizontal"
        aria-valuemax="110"
        aria-valuemin="0"
        aria-valuenow="110"
        aria-valuetext="110"
        class="MuiSlider-thumb MuiSlider-thumbColorPrimary"
        data-index="1"
        role="slider"
        style="left: 100%;"
        tabindex="0"
      />
    </span>
    <div
      class="genders"
    >
      <svg
        class="icon "
        fill="currentColor"
        height="28"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 512 512"
        width="28"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          hommes
        </title>
        <path
          d="M330 48v44h58.89l-60.39 60.39c-68.2-52.86-167-48-229.54 14.57C31.12 234.81 31.12 345.19 99 413a174.21 174.21 0 00246 0c62.57-62.58 67.43-161.34 14.57-229.54L420 123.11V182h44V48zm-16.08 333.92a130.13 130.13 0 01-183.84 0c-50.69-50.68-50.69-133.16 0-183.84s133.16-50.69 183.84 0 50.69 133.16 0 183.84z"
        />
      </svg>
      <svg
        class="icon "
        fill="currentColor"
        height="28"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 512 512"
        width="28"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          femmes
        </title>
        <path
          d="M430 190c0-95.94-78.06-174-174-174S82 94.06 82 190c0 88.49 66.4 161.77 152 172.61V394h-58v44h58v58h44v-58h58v-44h-58v-31.39c85.6-10.84 152-84.12 152-172.61zm-304 0c0-71.68 58.32-130 130-130s130 58.32 130 130-58.32 130-130 130-130-58.32-130-130z"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;
